#1083 Update Hauptmenü - Fixed Bug with column-count in Safari

--- a/style.css
+++ b/style.css
@@ -9790,9 +9790,6 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
     line-height: 1.5rem;
     padding-left: 12px;
   }
-  .mainnav-plainview .nav ul.level3 li:last-child {
-    padding-bottom: 15px;
-  }
   .mainnav-plainview .nav ul.level3 a {
     font-size: 0.875rem;
     line-height: 1.313rem;
@@ -9804,7 +9801,7 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
     justify-content: start;
     flex-direction: column;
   }
-  .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul, .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul, .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul {
+  .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul.level3, .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul.level3, .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level3, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level3 {
     column-width: 330px;
   }
   .mainnav-plainview .nav .flyout-entries-full.column-count-1 .button-portal, .mainnav-plainview .nav .flyout-entries-full.column-count-2 .button-portal, .mainnav-plainview .nav .flyout-entries-full.column-count-3 .button-portal, .mainnav-plainview .nav .flyout-entries-full.column-count-4 .button-portal {
@@ -9819,7 +9816,7 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   }
 }
 @media (min-width: 768px) {
-  .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul {
+  .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-1 ul.level3 {
     column-count: 1;
   }
   .mainnav-plainview .nav .flyout-entries-full.column-count-1 .button-portal {
@@ -9827,7 +9824,7 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   }
 }
 @media (min-width: 768px) {
-  .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul {
+  .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-2 ul.level3 {
     column-count: 2;
   }
   .mainnav-plainview .nav .flyout-entries-full.column-count-2 .button-portal {
@@ -9835,12 +9832,12 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   }
 }
 @media (min-width: 768px) {
-  .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul {
+  .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level3, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level3 {
     column-count: 3;
   }
 }
 @media (min-width: 768px) and (max-width: 1029px) {
-  .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul {
+  .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-3 ul.level3, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level2, .mainnav-plainview .nav .flyout-entries-full.column-count-4 ul.level3 {
     column-count: 2;
   }
 }
