--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -203,9 +203,6 @@
                     }
                 }
 
-                &.level3 li:last-child {
-                    padding-bottom: 15px;
-                }
                 &.level3 a {
 		            @include px2rem($font-size-nav-level3);
                     line-height: 1.2rem;
@@ -227,7 +224,7 @@
                 }
 
                 &.column-count-1, &.column-count-2, &.column-count-3, &.column-count-4 {
-                    ul {
+                    ul.level2, ul.level3 {
                         column-width: 330px;
                     }
                     .button-portal {
@@ -241,7 +238,7 @@
                     }
                 }
                 &.column-count-1 {
-                    ul {
+                    ul.level2, ul.level3 {
                         column-count: 1;
                     }
                     .button-portal {
@@ -249,7 +246,7 @@
                     }
                 }
                 &.column-count-2 {
-                    ul {
+                    ul.level2, ul.level3 {
                         column-count: 2;
                     }
                     .button-portal {
@@ -257,7 +254,7 @@
                     }
                 }
                 &.column-count-3, &.column-count-4 {
-                    ul {
+                    ul.level2, ul.level3 {
                         column-count: 3;
 
                         @media (max-width: 1029px) {
