#1083 Update Hauptmenü - Removed margin for lvl4 in Mobile

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -142,6 +142,10 @@
     ul {
         @include no-list;
         margin: 0 0 15px 0;
+        
+        &.level4 {
+            margin: 0;
+        }
 
         li {
             @include no-list; /* Necessary because there's a global style setting this to "disc" */
