#1083 Update Hauptmenü - Gave all lvl2s with lvl3 content more space to next element

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -172,6 +172,7 @@
             &.has-sub {
                 page-break-inside: avoid;
                 break-inside: avoid;
+                margin-bottom: 20px;
             }
 
             > a {
