--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -171,13 +171,13 @@
     }
 }
 .content-row .portalpage-sidebar {
-
+    padding-top: 20px;
     @media (min-width: $screen-sm) {
         align-self: flex-start;
         width: $sidebar-width-portal;
 	    max-width: $sidebar-maxwidth-portal;
         margin-top: 0;
-        padding-top: 0;
+        padding-top: 20px;
         padding-left: floor(math.div($grid-gutter-width, 2));
         border-top: none;
         border-left: 2px solid var(--color-primary-ci-hell2);
