--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -7,7 +7,10 @@
     overflow: inherit;
 	margin: 0 auto;
 	margin-top:10px;
+	@media (max-width: $screen-sm)  {
+		margin-top:0px;}
 }
+
 
 .slider-titel header a {
 
