--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -152,17 +152,17 @@
 			margin: 0;
 			padding: 1px 4px;
 			position: absolute;
+			bottom: 0;
 			right: 0;
-			top: 0;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			display: -webkit-box;
 			-webkit-line-clamp: 1; /* number of lines to show */
 					line-clamp: 1; 
 			-webkit-box-orient: vertical;
-			@media (min-width: $screen-sm) {
-				bottom: 0;
-				top: auto;
+			@media (max-width: $screen-sm) {
+				top: 0;
+				bottom: auto;
 			}
 		}
 		img {
@@ -198,18 +198,14 @@
 		padding: 0;
 		width: 100%;
 		height: 70px;
-		@include transform-translate(0, -75%);
+		bottom: 45px;
+		top: inherit;
+		transform: none;
 		@media (max-width: $screen-sm){
 			bottom:20px;
 			top:auto;
 			margin: 0 0px;
 			@include transform-translate(0, 0%);
-		}
-
-		@media (min-width: $screen-sm) {
-			bottom: 45px;
-			top: inherit;
-			transform: none;
 		}
 	}
 
@@ -250,24 +246,19 @@
 	.slick-next {
 		position: absolute;
 		display: block;
-		height: 160px;
 		width: 60px;
 		line-height: 0px;
 		font-size: 0px;
 		cursor: pointer;
 		background: transparent;
 		color: transparent;
-		top: calc(50% - 70px);
-		@media (max-width: $screen-sm) {
-			top:calc(50% - 30px);
-		}
-	
-		
-		@include transform-translate(0, -75%);
 
-		@media (min-width: $screen-sm) {
-			top: calc(50% - 70px);
-			@include transform-translate(0, -50%);
+		bottom: auto;
+		top: calc(50% - (45px + 70px + 225px)/2);
+		height: auto;
+
+		@media (max-width: $screen-sm) {
+			top: calc(50% - (20px + 85px + 75px)/2);
 		}
 
 		padding: 0;
