--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -3,48 +3,41 @@
 /*-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
-
 // outside-the-box image
 .my-custom-image {
     width: 100%;
-  
-
 }
 
 .my-custom-image-div {
    margin-inline: -10%;
-
-
 }
 
 .fau-row-outisde {
     width: 100%;
-
-
 }
 
 .fau-row-outisde-div {
    margin-inline: -25%;
-   p {
-       max-width: 60%;
-       width: 60%;
-       margin-left: 20% !important;
-   }
-   figure {
-       padding: 0 !important;
-       margin: 0 !important;
+
+    @media (max-width: $screen-xl) {
+        margin-inline: unset;
+    }
+    p {
+        max-width: 60%;
+        width: 60%;
+        margin-left: 20% !important;
+    }
+    figure {
+        padding: 0 !important;
+        margin: 0 !important;
    }
 }
-
-
 
 .post-navigation {
     background-color: #f3f9ff;
     padding: 0px;
     margin-top: 90px;
-
     display: inline;
-
 }
 
 .nav-previous {
@@ -52,8 +45,6 @@
 
     a {
         text-align: left;
-
-
     }
 
     ::before {
@@ -72,18 +63,13 @@
         transform: rotate(180deg);
         background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23222222" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
     }
-
-
-
 }
 
 .nav-next {
     float: right;
-    
 
     a {
         text-align: right;
-        
     }
 
     ::before {
@@ -138,11 +124,7 @@
         text-decoration: none;
         transition: none;
         text-decoration-color: none;
-
     }
-
-
-
 }
 
 .nav-previous:hover,
