imagelinks aus der suche und menu raus

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -218,7 +218,7 @@
             .flyout-entries-full {
                 display: flex;
                 align-items: center;
-                justify-content: start;
+                justify-content: flex-start;
                 flex-direction: column;
 
                 @media (max-width: $screen-md - 1) {
