Vereinheitlichung border-radius durch neue Custom Property

--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -104,6 +104,7 @@
     --color-menulink-hover-text: #{$color-menulink-hover-text};
     --color-menulink-hover-bg: #{$color-menulink-hover-bg}; 
     
-
+    --border-radius: #{$default-border-radius};
+    --border-radius-buttons: #{$border-radius-buttons};
 }
 
