--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -279,6 +279,12 @@
 
                 @media (min-width: $screen-sm) {
                     min-height: 199px;
+                   
+                }
+
+                @media (max-width: $screen-md) {
+                    margin-top: 30px;
+
                 }
             }
 
