--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -382,8 +382,9 @@ $screen-xl: 1400px;
 $screen-xxl: 1760px;
 $screen-xxs: 320px;
 
-//$slider-maxwidth: 1260px;
+$banner-img-maxwidth: 1260px;
 $slider-maxwidth: 100%;
+$banner-startpage-width:100%;
 //$slider-maxheight: 350px;
 $slider-maxheight: 480px;
 $slider-arrow-width: 40px;
