--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -31,7 +31,7 @@
 	    margin: 0 auto;
 	    height: auto;
 	    background: var(--color-hero-bg);
-	    max-width: 100%;
+	    max-width: $banner-startpage-width;
 	    overflow: hidden;
 	    @include box-shadow(0 10px 20px rgba(0,0,0,0.5));
 	    
@@ -45,6 +45,8 @@
 	    
 	    .introimg {
 		overflow: hidden;
+		max-width: $banner-img-maxwidth;
+		margin: 0 auto;
 
 		img {
 		    width: auto;
