--- a/style.css
+++ b/style.css
@@ -13959,6 +13959,21 @@ main .news-more-links .news-rss:hover:before {
 }
 
 /*-----------------------------------------------------------------------------------*/
+/* The Events Calendar plugin overwriten style for FAU theme
+/*-----------------------------------------------------------------------------------*/
+.tribe-events .tribe-events-c-top-bar__nav-list-item {
+  list-style: none;
+}
+
+.tribe-events-c-top-bar__nav-list-item {
+  list-style: none;
+}
+
+.tribe-events-c-view-selector__list-item {
+  list-style: none;
+}
+
+/*-----------------------------------------------------------------------------------*/
 /* Widgets
 /*-----------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------*/
