--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -434,5 +434,20 @@ main .subpages-menu,
     display: flex;
     gap: 10px 10px;
     flex-wrap: wrap;
+
+    a {
+        border-radius: var(--border-radius-buttons, 3px);
+        font-size: 0.937rem;
+        line-height: 1.407rem;
+        color: #222;
+        background-color: #DFE6EC;
+        padding: 0.5rem 0.7rem;
+        
+        &:hover {
+            text-decoration: none;
+            background-color: var(--color-menulink-hover-bg);
+            color: var(--color-menulink-hover-text);
+        }
+    }
 }
 
