#1274 date picker remove conflicted css

--- a/src/sass/structure/content/_TEC.scss
+++ b/src/sass/structure/content/_TEC.scss
@@ -169,3 +169,32 @@ list-style: none ;
 .tribe-events-c-subscribe-dropdown__list-item {
     list-style: none;
 }
+
+.tribe-events-c-messages__message-list-item{
+    list-style: none;
+}
+
+
+.tribe-events-c-messages__message-list-item li{
+    list-style: none;
+}
+
+.tribe-events .datepicker .datepicker-months th{
+   
+        background: #ffffff !important;
+
+       
+    
+}
+
+.datepicker {
+    table tr:nth-child(odd) td {
+        background: #ffffff !important;
+    }
+}
+
+.datepicker {
+    table th {
+        background: #ffffff !important;
+    }
+}
