#1273 added padding for mobile view

--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -422,5 +422,8 @@ main .subpages-menu,
             color: var(--color-menulink-hover-text);
         }
     }
+    @media (max-width: $screen-sm) {
+        padding-left: 10px;
+    }
 }
 
