#1276 remove border-radius

--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -409,7 +409,7 @@ main .subpages-menu,
     flex-wrap: wrap;
 
     a {
-        border-radius: var(--border-radius-buttons, 3px);
+       // border-radius: var(--border-radius-buttons, 3px);
         font-size: 0.937rem;
         line-height: 1.407rem;
         color: #222;
