--- a/src/sass/structure/content/_TEC.scss
+++ b/src/sass/structure/content/_TEC.scss
@@ -63,7 +63,7 @@ list-style: none ;
         margin:5px;
         background-color: var(--color-FAU);
         color: #ffffff;
-        border-radius: 4px;
+        //border-radius: 4px;
 
     }
 
