1262 - list style none

--- a/style.css
+++ b/style.css
@@ -11974,6 +11974,10 @@ ol.breadcrumblist li:last-child::after {
   margin-bottom: 15px;
 }
 
+.wsf-form ul li {
+  list-style: none;
+}
+
 /*-----------------------------------------------------------------------------------*/
 /* Assistant
 /*-----------------------------------------------------------------------------------*/
