- TEC SCSS an die richtige Stelle verschoben (unter plugins) - PHP Warning in Sanitizer behoben - Fehlender border-radius bei Slider-Button ergänzt

--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -28,7 +28,7 @@
 		display: inline-block;
 
 		background-color: var(--color-Default);
-			
+		border-radius: var(--border-radius, 0px);	
 		margin: 0 auto;
 		text-align: left;
 	
