--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -106,5 +106,6 @@
     
     --border-radius: #{$default-border-radius};
     --border-radius-buttons: #{$border-radius-buttons};
+    --devider-height: #{$default-devider-height};
 }
 
