--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -155,8 +155,9 @@
   --color-submenu-currentpage-text: #fff;
   --color-menulink-hover-text: #fff;
   --color-menulink-hover-bg: #004A9F;
-  --border-radius: 4px;
-  --border-radius-buttons: 4px;
+  --border-radius: 0px;
+  --border-radius-buttons: 0px;
+  --devider-height: 4px;
 }
 
 /*-----------------------------------------------------------------------------------*/
