--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -174,9 +174,12 @@ $color-ghostbutton-hover-bg:	map-get($colormap-primary, "ci-hell");
 
 
 // Default Border Radius
-$default-border-radius:	 4px;
-$border-radius-buttons:	 4px;
+$default-border-radius:	 0px;
+$border-radius-buttons:	 0px;
 
+
+// Devider Height
+$default-devider-height: 4px;
 
 // Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
 $socialmedia_icon_bgcolor_hover: map-get($colormap-primary, "ci-hell-kontrast");
