--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -242,6 +242,13 @@ Mixins File for Wordpress Theme FAU
     padding: 0.5rem 0.7rem;
     text-decoration: none;
     border-radius: var(--border-radius-buttons, 3px);
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+    font-weight: normal;
+    margin: 5px 0;
+    padding: 10px 18px;
+
     
     &:hover, &:focus {
         text-decoration: none;
