border-radius bei blockquotes und alerts vereinheitlicht

--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -1423,7 +1423,7 @@ a.bg-danger:focus {
 }
 .alert {
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: var(--border-radius, 4px);
 }
 .alert h4 {
   margin-top: 0;
