--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -8,6 +8,7 @@
 
     /* All links & buttons */
     a, [type=button] {
+        margin: 5px 0 0 0;
         text-decoration: none;
         font-weight: bold;
         color: var(--color-mainmenu-toplevel-text);
